--- a/client/app/components/InlineForm.stories.mdx
+++ b/client/app/components/InlineForm.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, ArgsTable, Canvas } from '@storybook/addon-docs/blocks';
 
 import * as Stories from './InlineForm.stories';
 
@@ -14,7 +14,9 @@ import InlineForm from './InlineForm';
 Inline forms give designers and developers the liberty to customize the width and spacing of each field in a row.
 Input fields can be found placed after labels and descriptions to provide users context and actionable steps.
 
-<Story story={Stories.Default} />
+<Canvas>
+  <Story story={Stories.Default} />
+</Canvas>
 
 ## Args
 
