--- a/client/app/components/Actions.stories.mdx
+++ b/client/app/components/Actions.stories.mdx
@@ -1,12 +1,9 @@
-import { Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Story, Canvas, Meta } from '@storybook/addon-docs/blocks';
 
 import { Actions } from './Actions.stories';
 
 <Meta
   title="Commons/Components/Layout/Actions"
-  parameters={{
-    controls: { expanded: true }
-  }}
 />
 
 # Actions 
