Use dropdown menu componentin story

--- a/client/app/components/UserDropdownMenu.stories.mdx
+++ b/client/app/components/UserDropdownMenu.stories.mdx
@@ -3,7 +3,7 @@ import { Story, Canvas, Meta } from '@storybook/addon-docs/blocks';
 import { UserDropdownMenu } from './UserDropdownMenu.stories';
 
 <Meta
-  title="Commons/Components/Layout/UserDropdownMenu"
+  title="Commons/Components/Layout/User Dropdown Menu"
 />
 
 # User Dropdown Menu 
